// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Narrative> renders as expected with tabs 1`] = `
<div
  className="narrative"
>
  <TabbedNarrative
    narrative="<div title='section one with many words in title' class='tabbed-narrative'><p>Lorem ipsum dolor sit amet.</p></div><br><div title='section two'><p>Different stuff</p></div>"
  />
</div>
`;

exports[`<Narrative> renders as expected without tabs 1`] = `
<div
  className="narrative"
>
  <NonTabbedNarrative
    narrative="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
  />
</div>
`;
